@@ -15,6 +15,7 @@
    - stevesk@cvs.openbsd.org 2001/04/14 17:04:42
      [scp.c]
      'T' handling rcp/scp sync; ok markus@
+  - Missed sshtty.[ch] in Sync.
 
 20010414
  - Sync with OpenBSD glob.c, strlcat.c and vis.c changes
@@ -5081,4 +5082,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1115 2001/04/14 23:14:22 mouring Exp $
+$Id: ChangeLog,v 1.1116 2001/04/14 23:21:50 mouring Exp $
